--- a/Veterinaria/Veterinaria.web/Views/Owners/Create.cshtml
+++ b/Veterinaria/Veterinaria.web/Views/Owners/Create.cshtml
@@ -20,7 +20,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Añadir" class="btn btn-default btn-outline-dark" />
+                <input type="submit" value="Añadir" class="btn btn-default btn-outline-warning" />
                 <a href="@Url.Action("Index", "Owners")" class="btn btn-sm btn-outline-danger">Cancelar</a>
             </div>
         </div>
