--- a/Veterinaria/Veterinaria.web/Views/Pets/Create.cshtml
+++ b/Veterinaria/Veterinaria.web/Views/Pets/Create.cshtml
@@ -84,7 +84,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Añadir" class="btn btn-default" />
+                <input type="submit" value="Añadir" class="btn btn-default btn-outline-warning" />
                 <a href="@Url.Action("Index", "Pets")" class="btn btn-sm btn-danger">Cancelar</a>
             </div>
         </div>
